crash fixes for klipper and it's "More" menus.

BUG:155196
BUG:165154


svn path=/trunk/KDE/kdebase/workspace/; revision=835199